1998-07-23  SL Baur  <steve@altair.xemacs.org>

	* Makefile (SPECIAL): Build edit-utils early.
	Ditto with speedbar.

	* XEmacs.rules (BUILD_MULE): Add variable.  Comment to avoid building
	Mule.

1998-06-21  SL Baur  <steve@altair.xemacs.org>

	* package-compile.el (package-directory-map): Add comm/mew.
	(package-name-to-directory): Handle mew lisp as subdirectory.

1998-04-17  Michael Sperber [Mr. Preprocessor]  <sperber@informatik.uni-tuebingen.de>

	* package-compile.el: Used paths-load-path-depth variable.

1998-04-07  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (srckit-std): Use $(TAR) not tar.
	(binkit-sourceonly): Ditto.
	(binkit-sourceinfo): Ditto.
	(binkit-sourcedata): Ditto.
	(binkit-sourcedatainfo): Ditto.

1998-04-04  SL Baur  <steve@altair.xemacs.org>

	* package-compile.el (package-directory-map): Add fsf-compat.

1998-02-27  Karl M. Hegbloom  <karlheg@bittersweet.inetarena.com>

	* package-compile.el (depends): Provide a more meaningful
	  error mess when a require isn't in the package map.

1998-01-24  SL Baur  <steve@altair.xemacs.org>

	* Makefile: Created.
	* libs/Makefile: Ditto.
	* comm/Makefile: Ditto.
	* games/Makefile: Ditto.
	* prog/Makefile: Ditto.
	* wp/Makefile: Ditto.
	* os/Makefile: Ditto.
	* oa/Makefile: Ditto.
	* mule/Makefile: Ditto.
	
	* XEmacs.rules (RCOPY): Parameterize recursive copy command.
	(package-info): Update to package standard 1.0.

1998-01-17  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (bindist): New target.  Rebuilds a binary kit and
	packge-info without making a source kit.

1998-01-16  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules: Add variable EXTRA_SOURCES which get added in
	source-only installation.

1998-01-11  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules: Explicitly load autoloads from dependent 
	packages.
	Move srckit/binkit dependencies here.
	Add REQUIRES variable.
	Move the *clean: dependencies here.

	* package-compile.el: New file.
