@@ -95,11 +95,13 @@
     ("mh-e" . "comm")
     ("net-utils" . "comm")
     ("ph" . "comm")
+    ("pgnus" . "comm")
     ("rmail" . "comm")
     ("supercite" . "comm")
     ("tm" . "comm")
     ("vm" . "comm")
     ("w3" . "comm")
+    ("zenirc" . "comm")
     ;; games/*
     ("cookie" . "games")
     ("games" . "games")
@@ -144,10 +146,14 @@
 				"../.."))))
     (cond ((equal package "gnus")
 	   (expand-file-name "gnus/lisp" (file-name-as-directory dir)))
+	  ((equal package "pgnus")
+	   (expand-file-name "gnus/lisp" (file-name-as-directory dir)))
 	  ((or (equal package "w3") (equal package "bbdb"))
 	   (expand-file-name "lisp" (file-name-as-directory dir)))
 	  ((equal package "mew")
 	   (expand-file-name "mew" (file-name-as-directory dir)))
+	  ((equal package "zenirc")
+	   (expand-file-name "src" (file-name-as-directory dir)))
 	  (t dir))))
 
 (defvar depends nil)
